--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="#sobremim" class="rodape-links">SOBRE MIM</a>
                 <a href="#skills" class="rodape-links">HABILIDADES</a>
                 <a href="#projetos" class="rodape-links">PROJETOS</a>
-                <a href="https://educarv0.github.io/formulario/" class="rodape-links">CONTATO</a>
+                <a href="https://github.com/dashboard" class="rodape-links">CONTATO</a>
             </div>
             <div class="flex">
                 <h3></h3>
