--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="flex">
                 <a href="#" target="_blank" class="contact"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="#" target="_blank" class="contact"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://github.com/educarv0" target="_blank" class="contact"><i class="fa-brands fa-github"></i></a>
+                <a href="https://dini021.github.io/Portifolio/" target="_blank" class="contact"><i class="fa-brands fa-github"></i></a>
             </div>
             <div class="flex">
                 <a href="#sobremim" class="rodape-links">SOBRE MIM</a>
