--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#sobremim" class="links">SOBRE MIM</a></li>
             <li><a href="#skills" class="links">HABILIDADES</a></li>
             <li><a href="#projetos" class="links">PROJETOS</a></li>
-            <li><a href="https://educarv0.github.io/formulario/" class="links">CONTATO</a></li>
+            <li><a href="https://dini021.github.io/Formluario/" class="links">CONTATO</a></li>
         </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars"></i>
