--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="#sobremim" class="rodape-links">SOBRE MIM</a>
                 <a href="#skills" class="rodape-links">HABILIDADES</a>
                 <a href="#projetos" class="rodape-links">PROJETOS</a>
-                <a href="https://github.com/dashboard" class="rodape-links">CONTATO</a>
+                <a href="https://dini021.github.io/Formluario/" class="rodape-links">CONTATO</a>
             </div>
             <div class="flex">
                 <h3></h3>
