--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <div class="box">
                     <h2>WEBSITES</h2>
                     <br>
-                    <p>Consigo desenvolver com facilidade Websites,com linguagem de html e css;</p>
+                    <p>Consigo desenvolver com facilidade Websites,com linguagem de html ,css e Js;</p>
                 </div>
                 <div class="box">
                     <h2>HABILIDADES</h2>
                     <br>
-                    <p>Consigo resolver problemas de nivel medio a baixo , e encotras soluçoes facilmente</p>
+                    <p>Consigo resolver problemas de nivel medio a baixo , e encontrar soluçoes facilmente</p>
                 </div>
             </div>
         </div>
